Fix stuff after cherry-picking